--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "sails-YOUR_ADAPTER",
-  "version": "0.10.0",
-  "description": "YOUR_ADAPTER_DATASRC adapter for Sails / Waterline",
+  "name": "sails-magento",
+  "version": "0.0.1",
+  "description": "Magento adapter for Sails / Waterline",
   "main": "index.js",
   "scripts": {
     "test": "node test/integration/runner -R spec -b"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR_USERNAME/sails-YOUR_ADAPTER.git"
+    "url": "https://github.com/mayconheerdt/sails-magento.git"
   },
   "keywords": [
-    "A_KEYWORD_SPECIFIC_TO_YOUR_ADAPTER",
-    "ANOTHER_KEYWORD_SPECIFIC_TO_YOUR_ADAPTER",
+    "magento",
+    "xml",
     "adapter",
     "sails",
-    "waterline",
-    "orm",
     "sailsjs",
     "sails.js"
   ],
-  "author": "YOUR NAME <YOUR@EMAIL>",
+  "author": "Maycon Heerdt <maycon@heerdt.com.br>",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "dependencies": {},
+  "dependencies": {
+    "magentojs" : ">=0.0.0.1"
+  },
   "devDependencies": {
-    "waterline-adapter-tests": "git://github.com/balderdashy/waterline-adapter-tests.git#associations",
     "mocha": "*",
     "root-require": "~0.2.0",
     "captains-log": "~0.10.6"
